<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash2"
    tools:context=".SignupActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="217dp"
        android:layout_height="100dp"
        android:text="@string/createyouracount"
        android:textColor="#FFF"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/alreadyhaveaccount" />

    <Button
        android:id="@+id/alreadyhaveaccount"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:layout_marginTop="15dp"

        android:shadowRadius="5"
        android:text="@string/signin"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:backgroundTint="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:background="@drawable/splash"
            android:orientation="vertical">

            <View
                android:id="@+id/view"
                android:layout_width="100dp"
                android:layout_height="5dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/background" />

            <EditText
                android:id="@+id/namebox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:autofillHints="name"
                android:background="@drawable/textbox"
                android:ems="10"
                android:hint="@string/fullname"
                android:inputType="textPersonName"
                android:padding="15dp"
                android:textColor="#1C1818"
                android:textColorHint="@color/color_white" />

            <EditText
                android:id="@+id/emailbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:autofillHints="emailAddress"
                android:background="@drawable/textbox"
                android:ems="10"
                android:hint="@string/Email"
                android:inputType="textEmailAddress"
                android:padding="15dp"
                android:textColor="#1C1818"
                android:textColorHint="@color/color_white" />

            <EditText
                android:id="@+id/passwordbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:autofillHints="password"
                android:background="@drawable/textbox"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="15dp"
                android:textColor="#1C1818"
                android:textColorHint="@color/color_white" />


            <Button
                android:id="@+id/submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/buttonshape"
                android:shadowColor="#A8A8A8"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="5"
                android:text="@string/Submit"
                android:textColor="#FFFFFF"
                android:textSize="30sp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <Button
        android:id="@+id/google"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginBottom="32dp"
        android:drawableStart="@drawable/ic_google"

        android:drawableLeft="@drawable/ic_google"
        android:text="@string/Google"
        android:textColor="#FBC02D"
        app:backgroundTint="@android:color/transparent"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toStartOf="@+id/login_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="88dp"
        android:minHeight="48dp"
        android:visibility="gone"
        app:backgroundTint="@android:color/transparent"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/google"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:text="@string/googlesignin"
        android:textColor="#E1BEE7"
        app:layout_constraintTop_toBottomOf="@+id/login_button" />
</androidx.constraintlayout.widget.ConstraintLayout>